@@ -10,14 +10,14 @@ $ENV{TIMETRACKER_HOME} ||= File::Spec->catdir('t', '.TimeTracker-' . basename($0
 File::Path::remove_tree($ENV{TIMETRACKER_HOME}) if -d $ENV{TIMETRACKER_HOME};
 
 sub tt {
-  my $path = File::Spec->catfile(qw( script tt ));
+  my $path = File::Spec->catfile(qw(script tt));
   plan skip_all => "Cannot find $path" unless -f $path;
   my $script = do $path || die $@;
   my $class = ref $script;
   no strict 'refs';
   no warnings 'redefine';
-  *{"$class\::_diag"} = sub { shift; push @main::diag, @_ };
-  *{"$class\::_say"}  = sub { shift; push @main::say,  @_ };
+  *{"$class\::_diag"} = sub { shift; $main::diag .= sprintf(shift, @_) . "\n" };
+  *{"$class\::_say"}  = sub { shift; $main::say  .= sprintf(shift, @_) . "\n" };
   return $script;
 }
 
@@ -25,8 +25,8 @@ sub import {
   my $class  = shift;
   my $caller = caller;
 
-  @main::diag = ();
-  @main::say  = ();
+  $main::diag = '';
+  $main::say  = '';
   strict->import;
   warnings->import;
   eval "package $caller;use Test::More;1" or die $@;
