@@ -2,6 +2,7 @@ Revision history for perl distribution App-tt
 
 0.02 Not Released
  - Fix "register" help output
+ - Allow register to only take hh:mm:ss as "stop"
 
 0.02 2016-07-19T11:02:15+0200
  - Fix double printing of messages
